--- a/a/index.html
+++ b/a/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+        <div class="dropdown-toggle" data-toggle="dropdown">SADASDSD</div>
       <span class="caret"></span></button>
       <ul class="dropdown-menu">
         <li><a href="#">HTML</a></li>
