--- a/a/index.html
+++ b/a/index.html
@@ -5,17 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/awesome/css/font-awesome.css">
+    <style>
+        .ba {
+            background: #F5A214;
+        }
+        .fRight {
+            float: right;
+            display: block;
+        }
+        
+    </style>
 </head>
 <body>
-    <div class="dropdown">
-        <div class="dropdown-toggle" data-toggle="dropdown">SADASDSD</div>
-      <span class="caret"></span></button>
-      <ul class="dropdown-menu">
+   <div class="container">
+    <div class="dropdown ba fRight">
+        <div class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-users"></i></div>
+      <ul class="dropdown-menu dropdown-menu-right">
         <li><a href="#">HTML</a></li>
         <li><a href="#">CSS</a></li>
         <li><a href="#">JavaScript</a></li>
       </ul>
     </div>
+</div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
 </body>
