--- a/a/index.html
+++ b/a/index.html
@@ -12,24 +12,15 @@
         }
         .fRight {
             float: right;
-            display: block;
         }
         
     </style>
 </head>
 <body>
-   <div class="container" style="margin-top: 150px;">
-    <div class="dropdown ba fRight">
-        <div class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-users"></i></div>
-      <ul class="dropdown-menu dropdown-menu-right">
-        <li><a href="#">HTML</a></li>
-        <li><a href="#">CSS</a></li>
-        <li><a href="#">JavaScript</a></li>
-      </ul>
-    </div>
-<div class="dropdown">
-  <div class="dropdown-toggle" data-toggle="dropdown">asdasdasdasd</div>
-  <ul class="dropdown-menu">
+   <div class="container" style="margin-top: 200px;">
+<div class="dropdown fRight">
+  <div class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-ellipsis-v"></i></div>
+  <ul class="dropdown-menu dropdown-menu-right">
     <li><a href="#">HTML</a></li>
     <li><a href="#">CSS</a></li>
     <li><a href="#">JavaScript</a></li>
