--- a/a/index.html
+++ b/a/index.html
@@ -7,27 +7,35 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/awesome/css/font-awesome.css">
     <style>
-        .ba {
-            background: #F5A214;
+        .uno {
+            position: fixed;
+            top: 0;
+            width: 250px;
+            height: 100%;
+            background: red;
+            z-index: 1;
         }
-        .fRight {
-            float: right;
+        .dos {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background: grey;
+            z-index: 0;
         }
         
     </style>
 </head>
 <body>
-   <div class="container" style="margin-top: 200px;">
-<div class="dropdown fRight">
-  <div class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-ellipsis-v"></i></div>
-  <ul class="dropdown-menu dropdown-menu-right">
-    <li><a href="#">HTML</a></li>
-    <li><a href="#">CSS</a></li>
-    <li><a href="#">JavaScript</a></li>
-  </ul>
-</div>
-</div>
+   <div class="uno"></div>
+   <div class="dos"></div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('.dos').click(function(){
+                alert('Hola');
+            });
+        });
+    </script>
 </body>
 </html>
