--- a/a/index.html
+++ b/a/index.html
@@ -30,12 +30,7 @@
    <div class="dos"></div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('.dos').click(function(){
-                alert('Hola');
-            });
-        });
-    </script>
+    <script src="funciones.js"></script>
+    <script>$(document).ready(main);</script>
 </body>
 </html>
