--- a/a/index.html
+++ b/a/index.html
@@ -13,14 +13,23 @@
             width: 250px;
             height: 100%;
             background: red;
-            z-index: 1;
+            z-index: 0;
         }
         .dos {
             position: fixed;
             width: 100%;
             height: 100%;
-            background: grey;
-            z-index: 0;
+            z-index: 1;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.7);
+            left: 250px;
+        }
+        .tres {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: green;
+            left: 250px;  
         }
         
     </style>
@@ -28,6 +37,7 @@
 <body>
    <div class="uno"></div>
    <div class="dos"></div>
+   <div class="tres">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati non temporibus laboriosam dolore reprehenderit, nisi error cumque saepe, ipsa ratione laudantium, neque quibusdam sapiente optio quam debitis ullam impedit perspiciatis.</div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="funciones.js"></script>
