--- a/a/index.html
+++ b/a/index.html
@@ -4,42 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/awesome/css/font-awesome.css">
-    <style>
-        .uno {
-            position: fixed;
-            top: 0;
-            width: 250px;
-            height: 100%;
-            background: red;
-            z-index: 0;
-        }
-        .dos {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-            background-color: rgb(0,0,0);
-            background-color: rgba(0,0,0,0.7);
-            left: 250px;
-        }
-        .tres {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: green;
-            left: 250px;  
-        }
-        
-    </style>
 </head>
 <body>
-   <div class="uno"></div>
-   <div class="dos"></div>
-   <div class="tres">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati non temporibus laboriosam dolore reprehenderit, nisi error cumque saepe, ipsa ratione laudantium, neque quibusdam sapiente optio quam debitis ullam impedit perspiciatis.</div>
+    <div><span class="align-top">bottom</span></div>
     <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="funciones.js"></script>
     <script>$(document).ready(main);</script>
 </body>
