--- a/a/index.html
+++ b/a/index.html
@@ -1,61 +1,11 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="recursos/awesome/css/font-awesome.css">
-    <link rel="stylesheet" rel="stylesheet">
-    <style>
-        .sButton {
-            position: fixed;
-            width: 30px;
-            height: 30px;
-            /*border-radius: 5px;*/
-            color: white;
-            background: #F5A214;
-            z-index: 1;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            transition: all 0.5s;
-        }
-        .sButton:hover {
-            cursor: pointer;
-            background: #262626;
-            -moz-transition: .4s linear;
-            -webkit-transition: .4s ease-out;
-            transition: .4s linear;
-        }
-        .sPlus {
-            bottom: 10px;
-            right: 10px;
-        }
-        .sOne {
-            bottom: 45px;
-            right: -30px;
-        }
-        .sTwo {
-            bottom: 80px;
-            right: -30px;
-        }
-        .displaySticky {
-            right: 10px;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    
+</head>
 <body>
-    <div class="sButton sPlus agregar"><div><i class="fa fa-plus"></i></div></div>
-    <div class="sButton sOne agregarZona"><div><i class="fa fa-globe"></i></div></div>
-    <div class="sButton sTwo agregarSupervisor"><div><i class="fa fa-user"></i></div></div>
-    <script src="recursos/jquery/jquery.min.js"></script>
-    <script>
-        $('.agregar').click(function(){
-            $('.sOne').toggleClass('displaySticky');
-            $('.sTwo').toggleClass('displaySticky');
-        });
-    </script>
+    
 </body>
 </html>
