--- a/a/recursos/simulador/index.html
+++ b/a/recursos/simulador/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Simulador</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="pickadate.js-3.5.6/default.css">
+    <link rel="stylesheet" href="pickadate.js-3.5.6/default.date.css">
+    <link rel="stylesheet" href="pickadate.js-3.5.6/default.time.css">
 </head>
 <body>
+    <h1>Fecha de datos</h1>
+    <input type="date" class="datepicker">
     <section>
     <form>
         <h1>patente/identificador/id</h1>
@@ -393,5 +398,10 @@
         <input id="mo" type="text" placeholder="boolean">
 </form>
    </section>
+   <script src="jquery/jquery-3.2.0.min.js"></script>
+   <script src="pickadate.js-3.5.6/picker.js"></script>
+   <script src="pickadate.js-3.5.6/picker.date.js"></script>
+   <script src="pickadate.js-3.5.6/picker.time.js"></script>
+   <script src="js/main.js"></script>
 </body>
 </html>
