--- a/a/recursos/simulador/index.html
+++ b/a/recursos/simulador/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Simulador</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!--<link rel="stylesheet" href="css/style.css">-->
     <link rel="stylesheet" href="pickadate.js-3.5.6/default.css">
     <link rel="stylesheet" href="pickadate.js-3.5.6/default.date.css">
     <link rel="stylesheet" href="pickadate.js-3.5.6/default.time.css">
+    <link rel="stylesheet" href="pickadate.js-3.5.6/main.css">
 </head>
 <body>
     <h1>Fecha de datos</h1>
