--- a/a/recursos/simulador/index.html
+++ b/a/recursos/simulador/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Simulador</title>
     <!--<link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="pickadate.js-3.5.6/main.css">
     <link rel="stylesheet" href="pickadate.js-3.5.6/default.css">
     <link rel="stylesheet" href="pickadate.js-3.5.6/default.date.css">
     <link rel="stylesheet" href="pickadate.js-3.5.6/default.time.css">
-    <link rel="stylesheet" href="pickadate.js-3.5.6/main.css">
 </head>
 <body>
     <h1>Fecha de datos</h1>
     <input type="date" class="datepicker">
-    <section>
+    <!--<section>
     <form>
         <h1>patente/identificador/id</h1>
         <label for="hor">Hora (hor)</label><br>
@@ -398,11 +398,14 @@
         <label for="mot">Motor funcionando (mot)</label><br>
         <input id="mo" type="text" placeholder="boolean">
 </form>
-   </section>
+   </section>-->
    <script src="jquery/jquery-3.2.0.min.js"></script>
    <script src="pickadate.js-3.5.6/picker.js"></script>
    <script src="pickadate.js-3.5.6/picker.date.js"></script>
    <script src="pickadate.js-3.5.6/picker.time.js"></script>
+   <script src="pickadate.js-3.5.6/legacy.js"></script>
+   <script src="pickadate.js-3.5.6/main.js"></script>
+   <script src="pickadate.js-3.5.6/rainbow.js"></script>
    <script src="js/main.js"></script>
 </body>
 </html>
