--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
                 background-color: rgba(0,0,0,0.2);
                 cursor: pointer;
             }
+            .leyend {
+                background: rgba(0,0,0,0.1);
+            }
         </style>
     </head>
     <body>
-        <table class="table table-striped table-bordered table-hover">
+        <table class="table table-hover">
             <thead>
                 <tr>
                     <th>Zona</th>
@@ -45,10 +48,20 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr class="sh">
                     <td class="mas"><div class="boton"><i class="fa fa-plus"></i></div><div class="zona">SAN JUAN DE LA SIERRA</div></td>
                     <td><input type="text" class="form-control text-center" value="27/03/07"></td>
                     <td><button class="btn btn-primary btn-sm">Ver</button></td>
+                </tr>
+                <tr class="leyend">
+                    <td colspan="3">
+                        <ul class="text-left">
+                            <li>Ultima actualizacion</li>
+                            <li>Fecha de algo 1</li>
+                            <li>Subido Por</li>
+                            <li>Hora de algo 1</li>
+                        </ul>
+                    </td>
                 </tr>
                 <tr>
                     <td class="mas"><div class="boton"><i class="fa fa-plus"></i></div><div class="zona">SAN JUAN DE LA SIERRA, LOS PERICOS</div></td>
