--- a/tabla.html
+++ b/tabla.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+        <link rel="stylesheet" href="a/recursos/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>idMaquina</th>
@@ -66,5 +67,6 @@
             </tr>
         </tbody>
     </table>
+    <script src="a/recursos/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
