--- a/tabla.html
+++ b/tabla.html
@@ -10,6 +10,7 @@
         <thead>
             <tr>
                 <th>idMaquina</th>
+                <th>identificador</th>
                 <th>fecha</th>
                 <th>registrada</th>
                 <th>existeEnArchivo</th>
